SERVER-21033 Do not wait for write concern under lock